[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/fonts/m5x/m5x7.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://ui/panel.tres" type="StyleBox" id=2]
[ext_resource path="res://assets/prosperosus_standard_theme.tres" type="Theme" id=3]
[ext_resource path="res://menus/main_menu/new_game_popup.gd" type="Script" id=4]
[ext_resource path="res://ui/sfx/buttons/GenericButton5.wav" type="AudioStream" id=5]
[ext_resource path="res://ui/sfx/alerts_notification/Success7a.wav" type="AudioStream" id=6]

[sub_resource type="DynamicFont" id=3]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="NewGamePopup" type="PopupDialog"]
visible = true
margin_left = 100.0
margin_top = 60.0
margin_right = 220.0
margin_bottom = 120.0
rect_min_size = Vector2( 120, 60 )
custom_styles/panel = ExtResource( 2 )
script = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 7.0
margin_top = 6.0
margin_right = -6.0
margin_bottom = -6.0
theme = ExtResource( 3 )
custom_constants/separation = 10
alignment = 1

[node name="LabelContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 6.0
margin_right = 107.0
margin_bottom = 19.0
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/LabelContainer"]
margin_left = 3.0
margin_right = 103.0
margin_bottom = 13.0
custom_fonts/font = SubResource( 3 )
text = "Start a new game?"
align = 1
valign = 1

[node name="ButtonContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 29.0
margin_right = 107.0
margin_bottom = 42.0
custom_constants/separation = 20
alignment = 1

[node name="Yes" type="Button" parent="VBoxContainer/ButtonContainer"]
margin_left = 24.0
margin_right = 45.0
margin_bottom = 13.0
text = "Yes"

[node name="No" type="Button" parent="VBoxContainer/ButtonContainer"]
margin_left = 65.0
margin_right = 83.0
margin_bottom = 13.0
text = "No"

[node name="Hover" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="Start" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[connection signal="focus_entered" from="VBoxContainer/ButtonContainer/Yes" to="." method="_on_Yes_focus_entered"]
[connection signal="mouse_entered" from="VBoxContainer/ButtonContainer/Yes" to="." method="_on_Yes_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/ButtonContainer/Yes" to="." method="_on_Yes_pressed"]
[connection signal="focus_entered" from="VBoxContainer/ButtonContainer/No" to="." method="_on_No_focus_entered"]
[connection signal="mouse_entered" from="VBoxContainer/ButtonContainer/No" to="." method="_on_No_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/ButtonContainer/No" to="." method="_on_No_pressed"]
